impl segemented list style; update list items to material expressive; fixed a bug were tenant got stuck in maintenance mode

--- a/ui/uix/web/assets/tailwind.css
+++ b/ui/uix/web/assets/tailwind.css
@@ -1960,6 +1960,14 @@ input:-webkit-autofill::first-line,
        column-gap: 1rem;
 }
 
+.gap-y-0 {
+  row-gap: 0px;
+}
+
+.gap-y-0\.5 {
+  row-gap: 0.125rem;
+}
+
 .gap-y-1 {
   row-gap: 0.25rem;
 }
@@ -2045,6 +2053,10 @@ input:-webkit-autofill::first-line,
   border-radius: 0.125rem;
 }
 
+.rounded-\[inherit\] {
+  border-radius: inherit;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -2102,6 +2114,11 @@ input:-webkit-autofill::first-line,
 .border-outline-variant {
   --tw-border-opacity: 1;
   border-color: rgb(var(--md-sys-color-outline-variant) / var(--tw-border-opacity, 1));
+}
+
+.\!bg-secondary-container {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(var(--md-sys-color-secondary-container) / var(--tw-bg-opacity, 1)) !important;
 }
 
 .bg-error {
@@ -2737,6 +2754,10 @@ input:-webkit-autofill::first-line,
 	 */
 
 /* hover:, etc get generated for utilities */
+
+.\*\:active > * {
+  display: block;
+}
 
 .peer:-moz-placeholder-shown ~ .peer-placeholder-shown\:body-lg {
   font-size: 1rem;
@@ -3960,6 +3981,73 @@ input:-webkit-autofill::first-line,
   .\32xl\:mt-1 {
     margin-top: 0.25rem;
   }
+}
+
+.\[\&\>\*\:active\:hover\]\:\!rounded-lg>*:active:hover {
+  border-radius: 1rem !important;
+}
+
+.\[\&\>\*\:active\]\:\!rounded-lg>*:active {
+  border-radius: 1rem !important;
+}
+
+.\[\&\>\*\:first-child\]\:rounded-t-lg>*:first-child {
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+}
+
+.\[\&\>\*\:focus-within\:hover\]\:\!rounded-lg>*:focus-within:hover {
+  border-radius: 1rem !important;
+}
+
+.\[\&\>\*\:focus-within\]\:\!rounded-lg>*:focus-within {
+  border-radius: 1rem !important;
+}
+
+.\[\&\>\*\:has\(\:checked\)\:hover\]\:\!rounded-lg>*:has(:checked):hover {
+  border-radius: 1rem !important;
+}
+
+.\[\&\>\*\:has\(\:checked\)\]\:\!rounded-lg>*:has(:checked) {
+  border-radius: 1rem !important;
+}
+
+.\[\&\>\*\:hover\]\:\!rounded-md>*:hover {
+  border-radius: 0.75rem !important;
+}
+
+.\[\&\>\*\:last-child\]\:rounded-b-lg>*:last-child {
+  border-bottom-right-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+}
+
+.\[\&\>\*\:only-child\]\:rounded-lg>*:only-child {
+  border-radius: 1rem;
+}
+
+.\[\&\>\*\[data-selected\=true\]\:hover\]\:\!rounded-lg>*[data-selected=true]:hover {
+  border-radius: 1rem !important;
+}
+
+.\[\&\>\*\[data-selected\=true\]\]\:\!rounded-lg>*[data-selected=true] {
+  border-radius: 1rem !important;
+}
+
+.\[\&\>\*\]\:overflow-hidden>* {
+  overflow: hidden;
+}
+
+.\[\&\>\*\]\:rounded-xs>* {
+  border-radius: 0.25rem;
+}
+
+.\[\&\>\*\]\:bg-surface-bright>* {
+  --tw-bg-opacity: 1;
+  background-color: rgb(var(--md-sys-color-surface-bright) / var(--tw-bg-opacity, 1));
+}
+
+.\[\&\>\*\]\:bg-transparent>* {
+  background-color: transparent;
 }
 
 @media (min-width: 2230px) {
